# Local_Image_Upload

./: .gitignore  .pre-commit-config.yaml  LLM_HANDOFF.md  PROMPT_FOR_NEW_LLM.md  README.md  pyproject.toml  setup.bat  start.bat  start.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  utils.py
static/: app.js  presence.js  style.css  to_phone.js
templates/: gallery.html  index.html  to_phone.html
tests/: test_app.py  test_utils.py
