[project]
name = "local-image-drop"
version = "0.1.0"
description = "Local Wi-Fi image uploader with QR code phone access."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "qrcode[pil]>=7.4.2,<8.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
  "bandit[toml]>=1.7.9,<2.0.0",
  "black>=24.8.0,<25.0.0",
  "httpx>=0.27.0,<1.0.0",
  "isort>=5.13.2,<6.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.4,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B104"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]